objects/Q_A_Imported__kav.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Answers</description>
        <label>Answer</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Architecture1__c</fullName>
        <description>Architecture</description>
        <label>Architecture</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise Networking</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Tier 1 Supported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Source__c</fullName>
        <description>Article Source</description>
        <label>Article Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qvidian</fullName>
                </value>
                <value>
                    <fullName>Jive</fullName>
                </value>
                <value>
                    <fullName>Topic</fullName>
                </value>
                <value>
                    <fullName>OneSearch</fullName>
                </value>
                <value>
                    <fullName>Mailers</fullName>
                </value>
                <value>
                    <fullName>Spark</fullName>
                </value>
                <value>
                    <fullName>SEVT</fullName>
                </value>
                <value>
                    <fullName>BU Homepage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment_1__c</fullName>
        <description>Attachment 1</description>
        <label>Attachment 1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_2__c</fullName>
        <description>Attachment 2</description>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <description>Folder</description>
        <label>Folder</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Knowledge_Flags__c</fullName>
        <description>Tag/Flag KB</description>
        <label>Knowledge Flags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Software Releases</fullName>
                </value>
                <value>
                    <fullName>Software Features</fullName>
                </value>
                <value>
                    <fullName>Software Roadmaps</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Hardware Features</fullName>
                </value>
                <value>
                    <fullName>Hardware Roadmaps</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
                <value>
                    <fullName>Certifications_Compliance</fullName>
                </value>
                <value>
                    <fullName>Standards_RFCs</fullName>
                </value>
                <value>
                    <fullName>Presentations</fullName>
                </value>
                <value>
                    <fullName>Diagrams_Drawings</fullName>
                </value>
                <value>
                    <fullName>Compatibility</fullName>
                </value>
                <value>
                    <fullName>MTBF</fullName>
                </value>
                <value>
                    <fullName>EoS_EoL</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Roadmap__c</fullName>
        <description>Is this feature on product roadmap?</description>
        <label>On Roadmap</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product ID</description>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_ID__c</fullName>
        <description>Unique ID within the source system from which content has been imported</description>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Classification__c</fullName>
        <description>Technology Classification related to TechSpec in case</description>
        <label>Technology Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise_Networking</fullName>
                </value>
                <value>
                    <fullName>EN_Switching</fullName>
                </value>
                <value>
                    <fullName>Catalyst_2K</fullName>
                </value>
                <value>
                    <fullName>Catalyst_3K</fullName>
                </value>
                <value>
                    <fullName>Catalyst_4K</fullName>
                </value>
                <value>
                    <fullName>Catalyst_6K</fullName>
                </value>
                <value>
                    <fullName>N7K</fullName>
                </value>
                <value>
                    <fullName>N9K</fullName>
                </value>
                <value>
                    <fullName>EN_Routing</fullName>
                </value>
                <value>
                    <fullName>ASR1K</fullName>
                </value>
                <value>
                    <fullName>WAAS</fullName>
                </value>
                <value>
                    <fullName>ISR_800</fullName>
                </value>
                <value>
                    <fullName>ISR_1K</fullName>
                </value>
                <value>
                    <fullName>ISR_2K</fullName>
                </value>
                <value>
                    <fullName>ISR_3K</fullName>
                </value>
                <value>
                    <fullName>ISR_4K</fullName>
                </value>
                <value>
                    <fullName>CSR_1K</fullName>
                </value>
                <value>
                    <fullName>iWAN</fullName>
                </value>
                <value>
                    <fullName>eNFV_ESA</fullName>
                </value>
                <value>
                    <fullName>EN_Wireless</fullName>
                </value>
                <value>
                    <fullName>ENCS</fullName>
                </value>
                <value>
                    <fullName>Converged_Access</fullName>
                </value>
                <value>
                    <fullName>CMX</fullName>
                </value>
                <value>
                    <fullName>Guest_Access</fullName>
                </value>
                <value>
                    <fullName>EMSP</fullName>
                </value>
                <value>
                    <fullName>Connected_Analytics_for_Network_Deployme</fullName>
                </value>
                <value>
                    <fullName>Connected_Analytics_for_Mobility</fullName>
                </value>
                <value>
                    <fullName>Connected_Streaming_Analytics</fullName>
                </value>
                <value>
                    <fullName>Connected_Analytics_for_Retail</fullName>
                </value>
                <value>
                    <fullName>Asset_Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Product Version</description>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Q &amp; A (Imported)</description>
    <label>Imported(Q&amp;A)</label>
    <pluralLabel>Q &amp; A (Imported)</pluralLabel>
</CustomObject>